latest rsf version

--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -46,7 +46,7 @@ forcefeedbacksensitivitytarmac=
 forcefeedbacksensitivitygravel=
 forcefeedbacksensitivitysnow=
 setuptarmac=
-setupgravel=
+setupgravel=22_d_gravel
 setupsnow=
 
 [car18]
@@ -492,7 +492,7 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 
 [stage1040]
-name=Gï¿½stabudstrofen
+name=Gästabudstrofen
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1789,7 +1789,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage417]
-name=Lucï¿½ram - Col Saint-Roch
+name=Lucéram - Col Saint-Roch
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1921,7 +1921,7 @@ setupsnow=
 [car59]
 name=Skoda Favorit 136 L GrpA
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.331120,-0.036398,-0.085121
+rbrvr_seat1=0.331120,-0.079838,-0.085121
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -2075,8 +2075,8 @@ fmod_mastervolume=
 forcefeedbacksensitivitytarmac=
 forcefeedbacksensitivitygravel=
 forcefeedbacksensitivitysnow=
-setuptarmac=
-setupgravel=
+setuptarmac=tarmac_i20N_2023-03-13_Vasgabi
+setupgravel=gravel_i20N_2023-03-18_Vasgabi
 setupsnow=
 
 [stage372]
@@ -2206,6 +2206,350 @@ usecubicenvironmentmaps_replay=
 
 [stage427]
 name=Zaton
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1073]
+name=Komokoriki Hill Road 2021 R
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage354]
+name=SSS Mikolajki I
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage110]
+name=Pirka Menoko II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1114]
+name=Sleeping Warrior 2019
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1081]
+name=TMF A 2021
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1080]
+name=Karagita Ruma
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1102]
+name=Ubunapa Kabula
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1100]
+name=Myllylähde
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1099]
+name=Pöykky
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage360]
+name=Joukkovaara gravel II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1061]
+name=Sarvana
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1066]
+name=Savo
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage373]
+name=Halenkovice SD
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage412]
+name=Komarov II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage149]
+name=Pribram
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage176]
+name=Semetin 2009
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage403]
+name=Zadverice II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage445]
+name=Koprivnice SS2
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage165]
+name=Osli-Stryckovy
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage402]
+name=Zadverice
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage411]
+name=Komarov
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage363]
+name=La Rocca
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1095]
+name=Monti di Ala
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage316]
+name=Swiss IV Gravel
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage158]
+name=Swiss Gravel
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[car17]
+name=Fiat 126 Grp2
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.235120,0.593683,-0.015681
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[stage477]
+name=La Mussara Shakedown II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage380]
+name=Sturec II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage428]
+name=Zaton II
 renderquality=
 renderquality_replay=
 particlequality=
