--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -4,8 +4,12 @@ ShowAdvancedOptions=true
 UseDXVK=
 UseDXVKMode=0
 AppMaximized=0
-AppLocation=695 185
-AppSize=850 728
+AppLocation=1416 83
+AppSize=1006 728
+HideWelcomeTips=1
+RSFLauncherLang=en
+SteeringFFBRegFix=0
+DXVKDriverVersion=0
 [AudioFMOD]
 Settings.enableFMOD=true
 Car00.masterVolume=1
@@ -76,8 +80,9 @@ rbr_rx.Enabled=true
 RSFstub.Enabled=true
 CrewChief.Enabled=True
 NGP.Enabled=True
-shifter.Enabled=True
+shifter.Enabled=False
 GaugerPlugin.Enabled=False
+RBRControls.Enabled=True
 [RBRvr]
 Settings.cameraShakeDisable=0
 Settings.renderScale=1.25
@@ -86,6 +91,8 @@ OverrideResolution=false
 VRXRes=400
 VRYRes=300
 Digidash2DVRPositions=true
+2DXRes=2560
+2DYRes=1440
 [RichardBurnsRally]
 NGP.udpTelemetryAddress=127.0.0.1
 Settings.ForceFeedback=true
