--- a/RallySimFans.ini
+++ b/RallySimFans.ini
@@ -9,13 +9,6 @@ slot = 5
 [controls]
 rbrvr = 0 0 0 0 0 0 0 0 0
 
-[develop]
-dev_options_view = false
-loadlog = 0
-nofixupcheck = false
-tracksettings_onscreen = false
-tracksettings_read = false
-
 [drive]
 auto = false
 gasket = true
@@ -23,6 +16,7 @@ pacecarrecording = true
 pausecountdown = true
 practice_damage = 3
 practice_pacecar = 0
+show_advanced_options = false
 
 [login]
 auto = true
@@ -37,7 +31,7 @@ minimap_cy = 0
 machine = false
 
 [splits]
-class = false
+class = true
 pos = 3
 show = true
 time = 10
