--- a/Misc/digidash_800.ini
+++ b/Misc/digidash_800.ini
@@ -1,142 +1,4 @@
-; RallySimFans_Launcher.DashStyle (do not delete this line) - Micro
-; Hud position
-62.5
-125
-;
-; Hud Size ( if width=0, then a default value will be used)
-0
-0
-;
-; Gear X positions
-88.75 ; R
-87.5 ; N
-100 ; 1
-85 ; 2
-87.5 ; 3
-85 ; 4
-85 ; 5
-85 ; 6
-83.75 ; Backlight
-;
-; Gear Y positions
-27.5 ; R
-22.5 ; N
-22.5 ; 1
-15 ; 2
-16.25 ; 3
-20 ; 4
-16.25 ; 5
-16.25 ; 6
-2777.5 ; Backlight
-;	
-; Revmeter positions ( interleaved X / Y ) last firs
-
-76.25 55
-73.75 55
-71.25 55
-68.75 55
-66.25 55
-63.75 55
-61.25 56.25
-58.75 57.5
-56.25 58.75
-53.75 60
-51.25 62.5
-48.75 65
-46.25 67.5
-43.75 70
-38.75 72.5
-36.25 76.25
-31.25 78.75
-25 82.5
-17.5 90
-12.5 95
-10 100
-7.5 105
-3.75 108.75
-2.5 112.5
-0 116.25
-
-
-2777.5 140
-2777.5 162.5
-2777.5 185
-;			
-; Turbometer X	
-31.25
-38.75
-46.25
-53.75
-61.25
-68.75
-
-2777.5
-2777.5
-2777.5 ; offscreen
-
-; Turbometer Y
-25
-25
-25
-25
-25
-25
-25
-25
-25
-;
-; Speedometer X Y
-90 87.5
-;
-; Distance 1 xy
-2777.5 187.5
-;
-; Distance 2 xy
-90 112.5
-;
-; Engine temp
-1492.5 113.75
-;
-; Warning positions interleaved xy
-95 140
-50 140
-25 140
-75 140
-117.5 140
-2777.5 281.25
-;
-; Speed label X Y (Road)
-2777.5 151.25
-; Turbo label X Y (Engine)
-2777.5 105
-; Temperature label X Y (Speed)
-58.75 93.75
-; Distance labels X Y
-45 118.75
-2777.5 17.5
-2777.5 158.75
-; RPM label X Y
-2777.5 105
-; RPM Numbers xy must be 8 of them
-2777.5 181.25 ;1
-2777.5 61.25 ;2
-21.25 118.75 ;3
-32.5 102.5 ;4
-42.5 90 ;5
-52.5 78.75 ;6
-62.5 70 ;7
-87.5 71.25 ;8
-; Gear change indicators x y two of them
-90 22.5
-90 30
-;
-; Alpha color, first is background alpha
-; second is for unlit elements, third lit
-0.0
-0.36
-0.77
-;
-; X1000 Label X Y
-2777.5 17.5
-; Not ending in $ will make computer sad
+; RallySimFans_Launcher.DashStyle (do not delete this line) - Disabled
+-2000
+-2000
 $
