--- a/Plugins/NGPCarMenu.ini
+++ b/Plugins/NGPCarMenu.ini
@@ -179,7 +179,7 @@
 FileFormat = 2
 
 ; Logon automatically to the specified menu screen when RBR game is started (Disabled, Main, Plugins, any of the custom plugin names, Replay). See NGPCarMenu in-game menu.
-AutoLogon = Rallysimfans.hu
+AutoLogon =Rallysimfans.hu
 
 ; Optional AutoLogonParam1 parameter for the autologon cmd. At the moment only Replay autologon cmd uses this.
 ; The following sample would replay myPlayback.rpl automatically at RBR launch time.
@@ -202,7 +202,7 @@ AutoLogon = Rallysimfans.hu
 AutoLogonWaitProfileSelection = 0
 
 ; Replace the RallySchool menu in the main menu with a custom menu link (Plugins or a custom plugin name). See NGPCarMenu in-game menu.
-RallySchoolMenuReplacement = Rallysimfans.hu
+RallySchoolMenuReplacement =Rallysimfans.hu
 
 ; 
 ; Pedals with "inverted data values" are problematic for RBR. Throttle/brake/clutch/handbrake goes to 100% at starting line until driver presses the pedal at least once.
@@ -271,7 +271,7 @@ CockpitCameraShaking = 0
 ;   If the option is in RBRWindowPosition=N format then RBR is shown on a specific monitor where N is the monitor# 1..n (RBRWindowPosition=2 means the second monitor)
 ;   If the option is in RBRWindowPosition=X Y format then RBR is shown at specific X Y coordinate (RBRWindowPosition=-1980 0 would show RBR on the fullhd monitor left to the primary monitor. Primary monitor is always at 0 0 coordinate, so negative X is on the left and positive X value on the right side)
 ;
-RBRWindowPosition = 2
+RBRWindowPosition =
 
 ;
 ; Upscale RBR wnd to the specified resolution. RBR Wnd will be shown in windowed fullscreen mode, but lower native RBR resolution is shown in upscaled resolution. This may help to improve fullscreen FPS in some PCs.
@@ -499,17 +499,23 @@ TrackIRViewRangeUpscale = 100
 HideUnlitDigidashWarningIcons = 1
 DefaultCountdownCam = 10
 KeepRBRAliveInBackground = 0
-ForceOverlaySupport = 0
+ForceOverlaySupport =1
 ShowReplayTimeResultMessage = 16
 F11ScreenshotMode = 3
 DeadzoneByTimeMSecGearShift = 0
-CockpitSteeringWheel_Replay=0
-CockpitWindscreen_Replay=0
-CockpitWipers_Replay=0
-DistanceUnit=0
-TemperatureUnit=0
-AdjustSteeringRotation=0
-WheelProtocol=0
+CockpitSteeringWheel_Replay = 0
+CockpitWindscreen_Replay = 0
+CockpitWipers_Replay = 0
+DistanceUnit = 0
+TemperatureUnit = 0
+AdjustSteeringRotation = 0
+WheelProtocol = 0
+CockpitSteeringWheel_VR = 0
+CockpitWindscreen_VR = 0
+CockpitWipers_VR = 0
+CockpitCameraShaking_VR=1
+CockpitOverrideFOV_VR=1
+CockpitOverrideFOVValue_VR=2.5
 
 
 ;
@@ -671,3 +677,6 @@ RBRTM_CarPictureCropping =
 
 [2560x1421]
 ScreenshotCropping = 0 310 2560 1030
+
+[1924x1061]
+ScreenshotCropping = 0 232 1924 769
