--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -20,7 +20,7 @@ forcefeedbacksensitivitysnow=
 [car16]
 name=Toyota Yaris WRC 2018
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.354560,0.116402,-0.100561
+rbrvr_seat1=0.347520,0.116402,-0.066161
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -36,7 +36,7 @@ setupsnow=
 [car22]
 name=Subaru Impreza GC8 555 GrpA
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.360720,-0.081598,-0.065201
+rbrvr_seat1=0.353600,-0.081598,-0.070561
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -492,7 +492,7 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 
 [stage1040]
-name=Gästabudstrofen
+name=Gï¿½stabudstrofen
 renderquality=
 renderquality_replay=
 particlequality=
@@ -604,7 +604,7 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 
 [stage1104]
-name=Grï¿½nbï¿½cken
+name=Gränbäcken
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1724,7 +1724,7 @@ setupsnow=
 [car48]
 name=Mitsubishi Lancer Evo IX R4
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.364160,-0.544638,-0.026641
+rbrvr_seat1=0.382960,-0.544638,-0.026641
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -1789,7 +1789,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage417]
-name=Lucéram - Col Saint-Roch
+name=Lucï¿½ram - Col Saint-Roch
 renderquality=
 renderquality_replay=
 particlequality=
@@ -2077,7 +2077,7 @@ forcefeedbacksensitivitygravel=
 forcefeedbacksensitivitysnow=
 setuptarmac=tarmac_i20N_2023-03-13_Vasgabi
 setupgravel=gravel_i20N_2023-03-18_Vasgabi
-setupsnow=
+setupsnow=gravel_i20N_2023-03-18_Vasgabi
 
 [stage372]
 name=Carvalho de Rei 2008 reverse
@@ -2303,7 +2303,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage1100]
-name=Myllylähde
+name=Myllylï¿½hde
 renderquality=
 renderquality_replay=
 particlequality=
@@ -2316,7 +2316,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage1099]
-name=Pöykky
+name=Pï¿½ykky
 renderquality=
 renderquality_replay=
 particlequality=
@@ -2550,6 +2550,232 @@ usecubicenvironmentmaps_replay=
 
 [stage428]
 name=Zaton II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage166]
+name=Hradek 1
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage401]
+name=Vinec-Skalsko NIGHT
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage163]
+name=Sieversdorf
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage191]
+name=Greenhills II Tarmac
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage45]
+name=Joux Verte II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage159]
+name=Swiss Tarmac
+renderquality=low
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1072]
+name=Komokoriki Hill Road 2021
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage175]
+name=Hualapai Nation II Snow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage368]
+name=Sherwood Forest II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage142]
+name=PTD RallySprint
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage140]
+name=RSI 3
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage358]
+name=Zaraso Salos - 2 Laps
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage130]
+name=Versme RallyCross
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage483]
+name=RabocsiRing RX
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage479]
+name=Ul. Rajdowa
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1121]
+name=Ahvenus I
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1069]
+name=Kaihuavaara 2021
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage464]
+name=Odry snow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage420]
+name=Pian del Colle Snow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage478]
+name=Zlin SS1
 renderquality=
 renderquality_replay=
 particlequality=
