--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -2,14 +2,21 @@
 ProfileVersion=1
 ShowAdvancedOptions=true
 UseDXVK=
-UseDXVKMode=0
+UseDXVKMode=2
 AppMaximized=0
-AppLocation=1416 83
+AppLocation=1469 300
 AppSize=1006 728
 HideWelcomeTips=1
 RSFLauncherLang=en
 SteeringFFBRegFix=0
 DXVKDriverVersion=0
+FullscreenMode_VR=2
+FullscreenMode=2
+AntiAliasing=Off
+AntiAliasingVR=SRS x2
+VRPluginType=1
+VRLockToHorizon=0
+VRDrawDesktopWindow=1
 [AudioFMOD]
 Settings.enableFMOD=true
 Car00.masterVolume=1
@@ -57,12 +64,12 @@ Default.HidePressESCForAssistanceMessage=0
 Default.HideUnlitDigidashWarningIcons=1
 Default.HideWrongWayMessage=0
 Default.TrackIRViewRangeUpscale=100
-Default.ForceOverlaySupport=0
+Default.ForceOverlaySupport=1
 Default.KeepRBRAliveInBackground=0
 Default.DeadzoneByTimeMSecGearShift=0
 Default.F11ScreenshotMode=3
 Default.ShowReplayTimeResultMessage=16
-Default.RBRWindowPosition=2
+Default.RBRWindowPosition=
 Default.AdjustSteeringRotation=0
 Default.CockpitSteeringWheel_Replay=0
 Default.CockpitWindscreen_Replay=0
@@ -70,12 +77,18 @@ Default.CockpitWipers_Replay=0
 Default.DistanceUnit=0
 Default.TemperatureUnit=0
 Default.WheelProtocol=0
+Default.CockpitSteeringWheel_VR=0
+Default.CockpitWindscreen_VR=0
+Default.CockpitWipers_VR=0
+Default.CockpitCameraShaking_VR=1
+Default.CockpitOverrideFOVValue_VR=2.5
+Default.CockpitOverrideFOV_VR=1
 [Plugins]
 FixUp.Enabled=true
 NGPCarMenu.Enabled=true
 PaceNote.Enabled=true
 PhysicsNG.Enabled=true
-RBRvrConfig.Enabled=true
+RBRvrConfig.Enabled=False
 rbr_rx.Enabled=true
 RSFstub.Enabled=true
 CrewChief.Enabled=True
@@ -83,16 +96,20 @@ NGP.Enabled=True
 shifter.Enabled=False
 GaugerPlugin.Enabled=False
 RBRControls.Enabled=True
+RBRHUD.Enabled=True
+openRBRVR.Enabled=True
 [RBRvr]
-Settings.cameraShakeDisable=0
+Settings.cameraShakeDisable=1
 Settings.renderScale=1.25
-AutoDisableGaugerPlugin=false
-OverrideResolution=false
-VRXRes=400
-VRYRes=300
+AutoDisableGaugerPlugin=true
+OverrideResolution=true
+VRXRes=1920
+VRYRes=1080
 Digidash2DVRPositions=true
-2DXRes=2560
-2DYRes=1440
+2DXRes=1920
+2DYRes=1080
+Settings.camLockHorizon=0
+Settings.noDesktop=0
 [RichardBurnsRally]
 NGP.udpTelemetryAddress=127.0.0.1
 Settings.ForceFeedback=true
@@ -101,11 +118,11 @@ Settings.ParticleQuality=high
 Settings.RenderCarShadow=true
 Settings.RenderQuality=high
 Settings.UseCubicEnvironmentMaps=true
-Settings.XRes=2560
-Settings.YRes=1440
-FullDigidashRaceStyle=My Original
+Settings.XRes=1920
+Settings.YRes=1080
+FullDigidashRaceStyle=Disabled
 MiniDigidashRaceStyle=Disabled
-FullDigidashReplayStyle=Custom
+FullDigidashReplayStyle=Disabled
 MiniDigidashReplayStyle=Disabled
 NGP.ForceFeedbackSensitivityGravel=150
 NGP.ForceFeedbackSensitivitySnow=150
@@ -126,10 +143,21 @@ Settings.UseCubicEnvironmentMaps_replay=true
 NGP.adaptiveFFB=1
 NGP.ffbBufferCycles=1
 NGP.ffbMinFPS=58
-NGP.fullscreenWindow=true
+NGP.fullscreenWindow=false
 NGP.headGasketDurability=10
 NGP.highQualityCubicEnvironmentMaps=0
-NGP.vSyncActive=1
+NGP.vSyncActive=0
+FullDigidashVRRaceStyle=Disabled
+NGP.ffbDeadZone=0
+NGP.ffbDeadZoneThreshold=0
+Settings.BTBRenderQuality_vr=high
+Settings.ParticleQuality_vr=off
+Settings.RenderCarShadow_vr=false
+Settings.RenderQuality_vr=high
+Settings.UseCubicEnvironmentMaps_vr=false
+NGP.udpTelemetryEndpoints=127.0.0.1:6776
+NGP.ffbRate=1000
+NGP.inputRate=1000
 [Telemetry]
 RecordCar3DMotion=
 RecordEngineTemps=1
@@ -141,7 +169,7 @@ RecordCarMapPosition=1
 RaceStyle=Disabled
 ReplayStyle=Disabled
 [PaceNote]
-Settings.enableGUI=0
+Settings.enableGUI=1
 Settings.showReplayHUD=1
 [RallySimFans]
 drive.gasket=true
@@ -151,3 +179,34 @@ stage.startclock_type=2
 drive.auto=false
 [rallysimfans_personal]
 car88.name=Ford Fiesta Rally3
+[RBRHUD]
+DamageHUDStyle=BeamNG
+DamageHUDStyle_Replay=Custom
+GaugesHUDStyle=1
+GaugesHUDStyle_Replay=1
+TireHUDStyle=1
+TireHUDStyle_Replay=0
+[CarDamageHUD]
+MAIN.Enabled=1
+[DamagedPartTableHUD]
+MAIN.Enabled=1
+[default]
+RSFLauncher.FullscreenMode_VR=0
+RSFLauncher.FullscreenMode=0
+[Gauges]
+MAIN.DuringRace=1
+MAIN.Enabled=1
+MAIN.Replay=1
+[tireHUD]
+MAIN.Enabled=1
+[dgVoodoo]
+DirectX.Antialiasing=appdriven
+DirectX.Resolution=unforced
+General.OutputAPI=d3d11_fl11_0
+[dxvk]
+DXVK.d3d9.forceSampleRateShading=true
+DXVK.d3d9.forceSwapchainMSAA=2
+[openrbrvr]
+.drawDesktopWindow=true
+.lockToHorizon=0
+.superSampling=1.35
