--- a/RichardBurnsRally.ini
+++ b/RichardBurnsRally.ini
@@ -36,11 +36,11 @@ telemetryTics = 5
 udpTelemetry =1
 udpTelemetryAddress = 127.0.0.1
 udpTelemetryPort = 6776
-fullscreenWindow=true
+fullscreenWindow=false
 fixAspectRatio=1
 highQualityCubicEnvironmentMaps=0
 fixVSync=1
-vSyncActive=1
+vSyncActive=0
 centerMenu=1
 adaptiveFFB=1
 headGasketDurability=10
@@ -48,6 +48,9 @@ ffbBufferCycles=1
 ffbMinFps=58
 ffbDeadZone=0
 ffbDeadZoneThreshold=0
+udpTelemetryEndpoints=127.0.0.1:6776
+inputRate=1000
+ffbRate=1000
 
 [Settings]
 ConstantForceMultiplier = -60
@@ -69,8 +72,8 @@ UseSoftwareAudio = false
 UseTrackIR = false
 UseTripleScreenBuffers = false
 WaitRetrace = true
-XRes =2560
-YRes =1440
+XRes =1920
+YRes =1080
 
 UseCubicEnvironmentMaps_replay=true
 RenderQuality_replay=high
@@ -78,3 +81,8 @@ BTBRenderQuality=high
 BTBRenderQuality_replay=high
 RenderCarShadow_replay=true
 ParticleQuality_replay=high
+UseCubicEnvironmentMaps_vr=false
+RenderQuality_vr=high
+BTBRenderQuality_vr=high
+RenderCarShadow_vr=false
+ParticleQuality_vr=off
