run some more stages

--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -46,7 +46,7 @@ forcefeedbacksensitivitytarmac=
 forcefeedbacksensitivitygravel=
 forcefeedbacksensitivitysnow=
 setuptarmac=
-setupgravel=22_d_gravel
+setupgravel=
 setupsnow=
 
 [car18]
@@ -2776,6 +2776,39 @@ usecubicenvironmentmaps_replay=
 
 [stage478]
 name=Zlin SS1
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage280]
+name=Jirkovicky
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage294]
+name=Rozmital 96 I
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage502]
+name=Savopohja
 renderquality=
 renderquality_replay=
 particlequality=
