--- a/RallySimFans.ini
+++ b/RallySimFans.ini
@@ -17,6 +17,7 @@ pausecountdown = true
 practice_damage = 3
 practice_pacecar = 0
 show_advanced_options = false
+pausecountdownreleasebuttons=3
 
 [login]
 auto = true
