--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2817,3 +2817,16 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[stage1079]
+name=Kinamba Yala
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
