--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -4,7 +4,7 @@ ShowAdvancedOptions=true
 UseDXVK=
 UseDXVKMode=2
 AppMaximized=0
-AppLocation=385 124
+AppLocation=489 295
 AppSize=1006 728
 HideWelcomeTips=1
 RSFLauncherLang=en
@@ -78,7 +78,7 @@ Default.DistanceUnit=0
 Default.TemperatureUnit=0
 Default.WheelProtocol=0
 Default.CockpitSteeringWheel_VR=0
-Default.CockpitWindscreen_VR=0
+Default.CockpitWindscreen_VR=1
 Default.CockpitWipers_VR=0
 Default.CockpitCameraShaking_VR=1
 Default.CockpitOverrideFOVValue_VR=2.5
@@ -177,6 +177,7 @@ drive.pausecountdown=true
 login.auto=true
 stage.startclock_type=2
 drive.auto=false
+drive.pausecountdownreleasebuttons=3
 [rallysimfans_personal]
 car88.name=Ford Fiesta Rally3
 [RBRHUD]
@@ -210,3 +211,6 @@ DXVK.d3d9.forceSwapchainMSAA=2
 .drawDesktopWindow=true
 .lockToHorizon=0
 .superSampling=1.35
+.desktopWindowMode='vreye'
+.runtime='steamvr'
+gfx.default.superSampling=1.35
