latest config changes

--- a/RallySimFans.ini
+++ b/RallySimFans.ini
@@ -14,10 +14,11 @@ auto = false
 gasket = true
 pacecarrecording = true
 pausecountdown = true
+pausecountdownreleasebuttons = 3
 practice_damage = 3
 practice_pacecar = 0
+racehud = 0
 show_advanced_options = false
-pausecountdownreleasebuttons=3
 
 [login]
 auto = true
