--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -1734,7 +1734,7 @@ forcefeedbacksensitivitytarmac=
 forcefeedbacksensitivitygravel=
 forcefeedbacksensitivitysnow=
 setuptarmac=
-setupgravel=
+setupgravel=gravel_LancerR4_Vasgabi
 setupsnow=
 
 [stage394]
@@ -2830,3 +2830,68 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 maxlodout_obj=
 maxlodout_obj_replay=
+
+[stage296]
+name=Sumburk 2007
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage295]
+name=Rozmital 96 II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[car36]
+name=Subaru Impreza N15 R4
+rbrvr_seat0=
+rbrvr_seat1=
+rbrvr_seat2=
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[car56]
+name=Mitsubishi Lancer Evo X R4
+rbrvr_seat0=
+rbrvr_seat1=
+rbrvr_seat2=
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=gravel_Evo_X_2023-09-07_Vasgabi
+setupsnow=
+
+[stage282]
+name=Sourkov
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
