--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -4,7 +4,7 @@ ShowAdvancedOptions=true
 UseDXVK=
 UseDXVKMode=2
 AppMaximized=0
-AppLocation=489 295
+AppLocation=876 261
 AppSize=1006 728
 HideWelcomeTips=1
 RSFLauncherLang=en
@@ -14,9 +14,11 @@ FullscreenMode_VR=2
 FullscreenMode=2
 AntiAliasing=Off
 AntiAliasingVR=SRS x2
-VRPluginType=1
+VRPluginType=2
 VRLockToHorizon=0
 VRDrawDesktopWindow=1
+ShowInGameRaceClock=0
+ShowInGameRaceClock_Replay=0
 [AudioFMOD]
 Settings.enableFMOD=true
 Car00.masterVolume=1
@@ -85,7 +87,7 @@ Default.CockpitOverrideFOVValue_VR=2.5
 Default.CockpitOverrideFOV_VR=1
 [Plugins]
 FixUp.Enabled=true
-NGPCarMenu.Enabled=true
+NGPCarMenu.Enabled=False
 PaceNote.Enabled=true
 PhysicsNG.Enabled=true
 RBRvrConfig.Enabled=False
@@ -98,6 +100,7 @@ GaugerPlugin.Enabled=False
 RBRControls.Enabled=True
 RBRHUD.Enabled=True
 openRBRVR.Enabled=True
+DirectorsCut.Enabled=True
 [RBRvr]
 Settings.cameraShakeDisable=1
 Settings.renderScale=1.25
@@ -212,5 +215,16 @@ DXVK.d3d9.forceSwapchainMSAA=2
 .lockToHorizon=0
 .superSampling=1.35
 .desktopWindowMode='vreye'
-.runtime='steamvr'
+.runtime='openxr'
 gfx.default.superSampling=1.35
+[openRBRTriples]
+Enabled=false
+NVIDIASurround=false
+BezelSize=0
+LeftXRes=0
+LeftYRes=0
+CenterXRes=0
+CenterYRes=0
+RightXRes=0
+RightYRes=0
+SavedCubicEnvMapsValue=1
