update to latest rsf

--- a/Misc/digidash_1024.ini
+++ b/Misc/digidash_1024.ini
@@ -1,4 +1,140 @@
-; RallySimFans_Launcher.DashStyle (do not delete this line) - Disabled
--2000
--2000
+; Hud position
+700
+532
+; Hud Size ( if width=0, then a default value will be used)
+150
+147
+;
+; Gear X positions
+186	; R
+186	; N
+226	; 1
+186	; 2
+192	; 3
+185	; 4
+186	; 5
+186	; 6
+186	; Backlight
+;
+; Gear Y positions
+101	; R
+106	; N
+106	; 1
+101	; 2
+101	; 3
+101	; 4
+101	; 5
+101	; 6
+101	; Backlight
+;	
+; Revmeter positions ( interleaved X / Y ) last firs
+239 42 
+230 42 
+221 42 
+
+212 42 
+203 42 
+194 42 
+185 42 
+176 42 
+
+167 42 
+158 42 
+149 42 
+140 42 
+131 42
+
+122 42 
+111 42
+101 43
+88  45
+71  48 
+
+54  54 
+40  65 
+33  80 
+30  93 
+29  107 
+
+29  121
+29  133
+29  148
+29  170
+29  192 		
+;			
+; Turbometer X	
+149
+168
+187
+206
+225
+244
+263
+149 ;offscreen 582
+149 ;offscreen 501
+;
+; Turbometer Y
+82
+82
+82
+82
+82
+82
+82
+82
+82
+;
+; Speedometer X Y
+247 162
+;
+; Distance 1 xy
+97 125
+;
+; Distance 2 xy
+97 162
+;
+; Engine temp
+247 122
+;
+; Warning positions interleaved xy
+101	201
+123	204
+149	205
+176	205
+200	204
+224	202
+; Speed label X Y
+250 147
+; Turbo label X Y
+101 83
+; Temperature label X Y
+247 105
+; Distance labels X Y
+97 105
+150 135
+150 173
+; RPM label X Y
+242 52
+; RPM Numbers xy must be 8 of them
+16 185	; 1
+14 162	; 2
+14 118	; 3
+38 52		; 4
+104 26	; 5
+147 26	; 6
+176 26	; 7
+224 26	; 8
+; Gear change indicators x y two of them
+79 8
+159 8
+;
+; Alpha color, first is background alpha
+; second is for unlit elements, third lit
+0.3 ; 0.2
+0.20 ; 0.25
+0.55 ; 0.45
+;
+; X1000 Label X Y
+196 26
+; Not ending in $ will make computer sad
 $
