--- a/Misc/digidash_1280.ini
+++ b/Misc/digidash_1280.ini
@@ -1,4 +1,141 @@
-; RallySimFans_Launcher.DashStyle (do not delete this line) - Disabled
--2000
--2000
+; Hud position
+855
+715
+;
+; Hud Size ( if width=0, then a default value will be used)
+195
+180
+;
+; Gear X positions
+240	; R
+240	; N
+295	; 1 290
+240	; 2
+247	; 3
+240	; 4
+240	; 5
+240	; 6
+240	; Backlight
+;
+; Gear Y positions
+123	; R
+131	; N
+130	; 1
+123	; 2
+123	; 3
+131	; 4
+123	; 5
+123	; 6
+123	; Backlight
+;	
+; Revmeter positions ( interleaved X / Y ) last firs
+309 54 
+297 54 
+285 54
+
+273 54 
+261 54
+249 54 
+237 54 
+225 54 
+
+213 54 
+201 54 
+189 54 
+177 54 
+165 54
+
+153 54 
+138 54
+125 55
+109 57
+88  61 
+
+66  69
+49  83
+40  101 
+36  117 
+36  136 
+
+36  153
+36  168
+36  186
+36  211
+36  236 		
+;			
+; Turbometer X	
+201
+224
+247
+270
+293
+316
+339
+201 ; offScreen! 562
+201 ; offscreen! 585
+;
+; Turbometer Y
+99
+99
+99
+99
+99
+99
+99
+99
+99
+;
+; Speedometer X Y
+310 208
+;
+; Distance 1 xy
+120 153
+;
+; Distance 2 xy
+120 198
+;
+; Engine temp
+310 150
+;
+; Warning positions interleaved xy
+126	250
+151	250
+186	251
+220	251
+250	250
+280	251
+; Speed label X Y
+321 186
+; Turbo label X Y
+137 100
+; Temperature label X Y
+314 129
+; Distance labels X Y
+120 129
+200 166 ;197 166
+200 212 ;197 212
+; RPM label X Y
+310 65
+; RPM Numbers xy must be 8 of them
+17 247	; 1
+17 198	; 2
+17 146	; 3
+48 66		; 4
+129 34	; 5
+175 34	; 6
+210 34	; 7
+273 34	; 8
+; Gear change indicators x y two of them
+118 13
+227 13
+;
+; Alpha color, first is background alpha
+; second is for unlit elements, third lit
+0.3 ; 0.2
+0.20 ; 0.25
+0.55 ; 0.45
+;
+; X1000 Label X Y
+252 34
+; Not ending in $ will make computer sad
 $
