--- a/RallySimFans.ini
+++ b/RallySimFans.ini
@@ -18,7 +18,12 @@ pausecountdownreleasebuttons = 3
 practice_damage = 3
 practice_pacecar = 0
 racehud = 0
+rallyseason_active = false
+rallyseason_difficulty_level = 15
+rallyseason_theme = WRC2019
 show_advanced_options = false
+telemetry_motec_conversion=false
+telemetry_keeponly_motec=false
 
 [login]
 auto = true
