--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2895,3 +2895,19 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[car47]
+name=Subaru Impreza N14 N4
+rbrvr_seat0=
+rbrvr_seat1=
+rbrvr_seat2=
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
