--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -19,6 +19,7 @@ VRLockToHorizon=0
 VRDrawDesktopWindow=1
 ShowInGameRaceClock=0
 ShowInGameRaceClock_Replay=0
+MinimizeOnRBRBootup=1
 [AudioFMOD]
 Settings.enableFMOD=true
 Car00.masterVolume=1
@@ -83,7 +84,7 @@ Default.CockpitSteeringWheel_VR=0
 Default.CockpitWindscreen_VR=1
 Default.CockpitWipers_VR=0
 Default.CockpitCameraShaking_VR=1
-Default.CockpitOverrideFOVValue_VR=2.5
+Default.CockpitOverrideFOVValue_VR=2.4
 Default.CockpitOverrideFOV_VR=1
 [Plugins]
 FixUp.Enabled=true
@@ -181,6 +182,8 @@ login.auto=true
 stage.startclock_type=2
 drive.auto=false
 drive.pausecountdownreleasebuttons=3
+drive.telemetry_keeponly_motec=false
+drive.telemetry_motec_conversion=false
 [rallysimfans_personal]
 car88.name=Ford Fiesta Rally3
 [RBRHUD]
@@ -216,7 +219,8 @@ DXVK.d3d9.forceSwapchainMSAA=2
 .superSampling=1.35
 .desktopWindowMode='vreye'
 .runtime='openxr'
-gfx.default.superSampling=1.35
+gfx.default.superSampling=1.3
+OpenXR.quadViewRendering=false
 [openRBRTriples]
 Enabled=false
 NVIDIASurround=false
